--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,10 +2,9 @@
   "name": "@snailycad/api",
   "version": "0.0.0",
   "scripts": {
-    "dev": "prisma migrate dev && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/main.ts",
+    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/main.ts",
     "format": "prisma format",
-    "generate": "prisma generate",
-    "postinstall": "npm run format && npm run generate"
+    "generate": "prisma generate"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -23,13 +22,13 @@
   "dependencies": {
     "@casper124578/utils": "^1.3.0",
     "@prisma/client": "^3.1.1",
-    "@tsed/common": "^6.73.0",
-    "@tsed/core": "^6.73.0",
-    "@tsed/di": "^6.73.0",
-    "@tsed/exceptions": "^6.73.0",
-    "@tsed/json-mapper": "^6.73.0",
-    "@tsed/platform-express": "^6.73.0",
-    "@tsed/schema": "^6.73.0",
+    "@tsed/common": "^6.73.5",
+    "@tsed/core": "^6.73.5",
+    "@tsed/di": "^6.73.5",
+    "@tsed/exceptions": "^6.73.5",
+    "@tsed/json-mapper": "^6.73.5",
+    "@tsed/platform-express": "^6.73.5",
+    "@tsed/schema": "^6.73.5",
     "bcrypt": "^5.0.1",
     "compression": "1.7.4",
     "cookie": "^0.4.1",
