--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
     "tsconfig-paths": "^3.11.0"
   },
   "dependencies": {
+    "@snailycad/schemas": "0.0.2-dev",
     "@casper124578/utils": "^1.3.0",
     "@prisma/client": "^3.1.1",
     "@tsed/common": "^6.73.5",
