--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "next": "^11.1.2",
+    "next-intl": "^2.0.5",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
