--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@snailycad/schemas": "0.0.2-dev",
     "@casper124578/utils": "^1.3.0",
+    "@snailycad/config": "0.0.0",
     "@prisma/client": "^3.1.1",
     "@tsed/common": "^6.73.5",
     "@tsed/core": "^6.73.5",
