--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
     "@casper124578/utils": "^1.3.0",
     "@headlessui/react": "^1.4.1",
     "@snailycad/schemas": "0.0.2-dev",
+    "@snailycad/config": "0.0.0",
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "next": "^11.1.2",
