--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages/**"
   ],
   "scripts": {
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
+    "format": "prettier --write \"./packages/**/**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
       "lint": "eslint . --ext .ts,.js,.tsx,.jsx"
   },
   "license": "MIT",
