--- a/.eslintignore
+++ b/.eslintignore
@@ -9,3 +9,5 @@ packages/api/public/**/*.png
 packages/api/public/**/*.svg
 packages/api/public/**/*.jpg
 packages/api/public/**/*.jpeg
+
+next-env.d.ts
