--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@casper124578/utils": "^1.3.0",
     "@headlessui/react": "^1.4.1",
-    "@snailycad/schemas": "0.0.2-dev",
     "@snailycad/config": "0.0.0",
+    "@snailycad/schemas": "0.0.2-dev",
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "next": "^11.1.2",
@@ -27,6 +27,7 @@
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
+    "preact": "^10.5.14",
     "sass": "^1.42.1",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3"
