--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "zod": "^3.9.5"
   },
   "devDependencies": {
