:hammer: docker fixes

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_
 
 CORS_ORIGIN_URL="http://localhost:3000"
 JWT_SECRET="some-random-string-of-characters"
+
+# keep as is when using docker.
+NEXT_PUBLIC_PROD_ORIGIN="http://api:8080/v1"
