--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/main.ts",
+    "start": "prisma migrate deploy && prisma generate && ts-node src/main.ts",
     "format": "prisma format",
     "generate": "prisma generate"
   },
