--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
+    "react-markdown": "^7.0.1",
     "zod": "^3.9.8"
   },
   "devDependencies": {
