--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "format": "prettier --write \"./packages/**/**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
-    "lint": "eslint . --ext .ts,.js,.tsx,.jsx"
+    "lint": "eslint . --ext .ts,.js,.tsx,.jsx",
+    "prepare": "husky install"
   },
   "license": "MIT",
   "devDependencies": {
@@ -15,6 +16,7 @@
     "@casper124578/eslint-config-next": "^0.1.1",
     "@casper124578/eslint-config-react": "^0.1.2",
     "eslint": "^7.32.0",
+    "husky": "^7.0.2",
     "prettier": "^2.4.1"
   }
 }
