--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,10 +21,10 @@
     "tsconfig-paths": "^3.11.0"
   },
   "dependencies": {
-    "@snailycad/schemas": "0.0.2-dev",
     "@casper124578/utils": "^1.3.0",
-    "@snailycad/config": "0.0.0",
     "@prisma/client": "^3.2.1",
+    "@snailycad/config": "0.0.0",
+    "@snailycad/schemas": "0.0.2-dev",
     "@tsed/common": "^6.73.9",
     "@tsed/core": "^6.73.9",
     "@tsed/di": "^6.73.9",
@@ -32,6 +32,8 @@
     "@tsed/json-mapper": "^6.73.9",
     "@tsed/platform-express": "^6.73.9",
     "@tsed/schema": "^6.73.9",
+    "@tsed/socketio": "^6.73.9",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.0.1",
     "compression": "1.7.4",
     "cookie": "^0.4.1",
@@ -41,6 +43,7 @@
     "jsonwebtoken": "8.5.1",
     "nodemon": "^2.0.13",
     "prisma": "^3.2.1",
+    "socket.io": "^4.2.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
     "yup": "^0.32.9"
