--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-markdown": "^7.0.1",
+    "socket.io-client": "^4.2.0",
     "zod": "^3.9.8"
   },
   "devDependencies": {
