--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,"
   },
   "dependencies": {
+    "@casper124578/use-socket.io": "1.0.1",
     "@casper124578/utils": "^1.3.0",
     "@headlessui/react": "^1.4.1",
     "@snailycad/config": "0.0.0",
