--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-markdown": "^7.0.1",
+    "react-select": "^5.1.0",
     "socket.io-client": "^4.3.2",
     "zod": "^3.9.8",
     "zustand": "^3.5.13"
