stage formatted file

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages/**"
   ],
   "scripts": {
+    "format:quick": "pretty-quick --staged --pattern \"packages/**/*.{js,jsx,ts,tsx,md,css,json}\"",
     "format": "prettier --write \"./packages/**/**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx",
     "prepare": "husky install"
@@ -17,6 +18,7 @@
     "@casper124578/eslint-config-react": "^0.1.2",
     "eslint": "^7.32.0",
     "husky": "^7.0.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.1"
   }
 }
