--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "snailycad",
   "version": "0.0.0",
+  "packageManager": "yarn@3.0.2",
   "workspaces": [
     "packages/**"
   ],
