:tada: much progress on stuff

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "8.5.5",
+    "@types/node-fetch": "^3.0.3",
     "esbuild": "^0.13.8",
     "esbuild-register": "^3.0.0",
     "ts-node": "^10.2.1",
@@ -39,8 +40,10 @@
     "cookie": "^0.4.1",
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
+    "discord-api-types": "^0.24.0",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
+    "node-fetch": "2",
     "nodemon": "^2.0.14",
     "prisma": "^3.3.0",
     "socket.io": "^4.3.1",
