:hammer: minor refactor

--- a/.github/ISSUE_TEMPLATE/2.feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2.feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Request a feature or a change to improve SnailyCAD
-labels: "bug"
+labels: "enhancement"
 body:
   - type: textarea
     attributes:
