--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/config",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc"
