--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/api",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha",
   "scripts": {
     "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/main.ts",
     "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && ts-node src/main.ts",
@@ -24,8 +24,8 @@
   "dependencies": {
     "@casper124578/utils": "^1.3.0",
     "@prisma/client": "^3.3.0",
-    "@snailycad/config": "0.0.0",
-    "@snailycad/schemas": "0.0.2-dev",
+    "@snailycad/config": "0.1.0-alpha",
+    "@snailycad/schemas": "0.1.0-alpha",
     "@tsed/common": "^6.75.6",
     "@tsed/core": "^6.75.6",
     "@tsed/di": "^6.75.6",
