--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/client",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,8 +12,8 @@
     "@casper124578/use-socket.io": "2.0.0",
     "@casper124578/utils": "^1.3.0",
     "@headlessui/react": "^1.4.1",
-    "@snailycad/config": "0.0.0",
-    "@snailycad/schemas": "0.0.2-dev",
+    "@snailycad/config": "0.1.0-alpha",
+    "@snailycad/schemas": "0.1.0-alpha",
     "axios": "^0.23.0",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
