--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/schemas",
-  "version": "0.0.2-dev",
+  "version": "0.1.0-alpha",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc"
