--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.1.1",
     "react-markdown": "^7.1.0",
     "react-select": "^5.1.0",
+    "react-use": "^17.3.1",
     "socket.io-client": "^4.3.2",
     "zod": "^3.11.2",
     "zustand": "^3.6.0"
