:tada: able to manage units (closes #15)

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
+    "incremental": true,
 
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -14,9 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-
     "strict": true,
-
     "baseUrl": ".",
     "paths": {
       "lib/*": ["./src/lib/*"],
