--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
+    "hex-color-regex": "^1.1.0",
     "next": "^12.0.0",
     "next-intl": "^2.0.5",
     "react": "^17.0.2",
