--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -42,6 +42,7 @@
     "discord-api-types": "^0.24.0",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
+    "nanoid": "^3.1.30",
     "node-fetch": "2",
     "nodemon": "^2.0.14",
     "prisma": "^3.3.0",
