--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/glob": "^7.2.0",
     "@types/jsonwebtoken": "8.5.5",
     "@types/node-fetch": "^3.0.3",
     "esbuild": "^0.13.12",
@@ -41,6 +42,7 @@
     "cors": "2.8.5",
     "discord-api-types": "^0.24.0",
     "express": "4.17.1",
+    "glob": "^7.2.0",
     "jsonwebtoken": "8.5.1",
     "nanoid": "^3.1.30",
     "node-fetch": "2",
