--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "hex-color-regex": "^1.1.0",
     "next": "^12.0.2",
     "next-intl": "^2.1.1",
+    "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
     "react-colorful": "^5.5.0",
