--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "snailycad",
-  "version": "0.9.0-alpha",
+  "version": "1.0.0-beta.0",
   "packageManager": "yarn@3.0.2",
   "workspaces": [
     "packages/**"
