--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/api",
-  "version": "0.9.0-alpha",
+  "version": "1.0.0-beta.0",
   "scripts": {
     "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/main.ts",
     "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && ts-node src/main.ts",
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@prisma/client": "^3.4.0",
-    "@snailycad/config": "0.9.0-alpha",
-    "@snailycad/schemas": "0.9.0-alpha",
+    "@snailycad/config": "1.0.0-beta.0",
+    "@snailycad/schemas": "1.0.0-beta.0",
     "@tsed/common": "^6.75.11",
     "@tsed/core": "^6.75.11",
     "@tsed/di": "^6.75.11",
