--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/client",
-  "version": "0.9.0-alpha",
+  "version": "1.0.0-beta.0",
   "scripts": {
     "dev": "rimraf .env && next dev",
     "build": "yarn copy-env && next build",
@@ -12,8 +12,8 @@
   "dependencies": {
     "@casper124578/use-socket.io": "2.0.0",
     "@headlessui/react": "^1.4.1",
-    "@snailycad/config": "0.9.0-alpha",
-    "@snailycad/schemas": "0.9.0-alpha",
+    "@snailycad/config": "1.0.0-beta.0",
+    "@snailycad/schemas": "1.0.0-beta.0",
     "axios": "^0.24.0",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
