--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/schemas",
-  "version": "0.9.0-alpha",
+  "version": "1.0.0-beta.0",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc"
