--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
     "build": "yarn copy-env && yarn next-build",
     "next-build": "next build",
     "start": "next start",
-    "copy-env": "node ../../scripts/copy-env.mjs",
+    "copy-env": "node ../../scripts/copy-env.mjs --client",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,"
   },
