--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
     "react-colorful": "^5.5.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-markdown": "^7.1.0",
