:tada: initial cropper

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
     "@snailycad/config": "1.0.0-beta.6",
     "@snailycad/schemas": "1.0.0-beta.6",
     "axios": "^0.24.0",
+    "cropperjs": "^1.5.12",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
@@ -28,6 +29,7 @@
     "react-bootstrap-icons": "^1.6.1",
     "react-colorful": "^5.5.0",
     "react-cool-onclickoutside": "^1.7.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-markdown": "^7.1.0",
