--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "name": "snailycad",
   "version": "1.0.0-beta.9",
   "packageManager": "yarn@3.1.0",
-  "workspaces": ["packages/**"],
+  "workspaces": [
+    "packages/**"
+  ],
   "scripts": {
     "format:quick": "pretty-quick --staged --pattern \"packages/**/*.{js,jsx,ts,tsx,md,css,json}\"",
     "format": "prettier --write \"./packages/**/**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
