--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,7 +22,7 @@
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
     "next": "^12.0.4",
-    "next-intl": "^2.2.0",
+    "next-intl": "2.1.0",
     "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
