:hammer: fix lint

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "colorette": "2.0.16",
     "copy": "^0.3.2",
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "prettier": "^2.5.0",
     "pretty-quick": "^3.1.2"
