--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "license": "MIT",
   "devDependencies": {
     "@casper124578/eslint-config": "^1.0.0",
-    "@casper124578/eslint-config-next": "^0.1.1",
+    "@casper124578/eslint-config-next": "^1.0.0",
     "@casper124578/eslint-config-react": "^0.1.2",
     "colorette": "2.0.16",
     "copy": "^0.3.2",
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.0",
     "pretty-quick": "^3.1.2"
   }
 }
