--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,7 @@
     "next-build": "next build",
     "start": "next start",
     "start:proxy-experimental": "next start --port 80",
-    "copy-env": "node ../../scripts/copy-env.mjs --client",
+    "copy-env": "node ../../scripts/copy-env.mjs --client --api",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,"
   },
