:hammer: update some configs

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ CORS_ORIGIN_URL="http://localhost:3000"
 JWT_SECRET="some-random-string-of-characters"
 
 NEXT_PUBLIC_PROD_ORIGIN="http://api:8080/v1"
+
+# only enter this value if you're using a domain!
+# domain should only be the, not including sub-domains
+# example: `DOMAIN="example.com"`
+DOMAIN=""
