:tada: initial Discord auth support

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -12,6 +12,7 @@
     "declaration": false,
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
+    "skipLibCheck": true,
 
     "outDir": "dist",
     "strict": true,
