--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,7 +16,8 @@
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
     "@types/jsonwebtoken": "8.5.6",
-    "@types/node-fetch": "^3.0.3",
+    "@types/node": "^16.11.12",
+    "@types/node-fetch": "2",
     "esbuild": "^0.14.2",
     "esbuild-register": "^3.2.0",
     "ts-node": "^10.4.0",
