--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0-beta.13",
   "scripts": {
     "dev": "rimraf .env && next dev",
-    "build": "yarn copy-env && yarn next-build",
+    "build": "yarn validate && yarn copy-env && yarn next-build",
     "next-build": "next build",
     "start": "next start",
     "start:proxy-experimental": "next start --port 80",
     "copy-env": "node ../../scripts/copy-env.mjs --client --api",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
-    "lint": "eslint . --ext .ts,.js,.tsx,.jsx,"
+    "lint": "eslint . --ext .ts,.js,.tsx,.jsx,",
+    "validate": "node ../../scripts/validate.mjs"
   },
   "dependencies": {
     "@casper124578/use-socket.io": "2.0.0",
