--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -3,12 +3,23 @@
   "version": "1.0.0-beta.13",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsup"
   },
   "devDependencies": {
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "tsup": "^5.11.6"
   },
   "dependencies": {
     "zod": "^3.11.6"
+  },
+  "tsup": {
+    "entry": [
+      "src/**/*.ts"
+    ],
+    "dts": true,
+    "bundle": false,
+    "platform": "node",
+    "target": "node16",
+    "silent": true
   }
 }
