--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "@casper124578/useful": "^1.4.2",
     "@headlessui/react": "^1.4.2",
     "@radix-ui/react-context-menu": "^0.1.3",
+    "@radix-ui/react-switch": "^0.1.4",
     "@snailycad/config": "1.0.0-beta.13",
     "@snailycad/schemas": "1.0.0-beta.13",
     "axios": "^0.24.0",
