:hammer: chore: update .env.example with simple info

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,37 @@
-NODE_ENV="production"
-
-# API stuff
+# This is the password to the postgress database.
 POSTGRES_PASSWORD="admin"
+
+# This is the username to the postgress database.
 POSTGRES_USER="admin"
 
 # 'postgres' is the docker-compose image. Keep port as '5432' when using docker-compose
 DB_HOST="postgres"
 DB_PORT="5432"
+
+# The database name.
 POSTGRES_DB="snaily-cad-v4"
 
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?sslmode=prefer
 
-CORS_ORIGIN_URL="http://localhost:3000"
+
+# This is a random value to keep the CAD's cookies secured. Make sure to change this!
 JWT_SECRET="some-random-string-of-characters"
 
+# This is the URL to your site where the CAD is hosted.
+# -> eg https://cad.mysite.com or http://99.99.00.190:3000
+CORS_ORIGIN_URL="http://localhost:3000"
+
+# The URL/IP to where the API is hosted.
+# -> eg https://cad-api.mysite.com/v1 or http://99.99.00.190:8000/v1
 NEXT_PUBLIC_PROD_ORIGIN="http://api:8080/v1"
 
 # only enter this value if you're using a domain!
 # domain should only be the, not including sub-domains
 # example: `DOMAIN="example.com"`
 DOMAIN=""
+
+
+# Do not change this.
+NODE_ENV="production"
+
+# Do not change this, unless you know what you're doing!
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?sslmode=prefer
