:hammer: rename .env value

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ DOMAIN=""
 
 # The port of which the API will run on. Default: 8080
 # When using Docker, make sure to change this in the `production.docker-compose.yml` file too.
-API_PORT=8080
+PORT_API=8080
 
 
 
