--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,9 @@
     "date-fns": "^2.27.0",
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
+    "jquery": "^3.6.0",
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.3",
     "next": "^12.0.7",
     "next-intl": "2.3.0",
     "pretty-bytes": "^5.6.0",
@@ -47,6 +50,9 @@
     "zustand": "^3.6.7"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.10",
+    "@types/leaflet": "^1.7.6",
+    "@types/leaflet.markercluster": "^1.4.6",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-table": "^7.7.9",
