:hammer: refactor: use tsconfig "paths" for API

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -16,6 +16,14 @@
 
     "outDir": "dist",
     "strict": true,
-    "lib": ["esnext"]
+    "lib": ["esnext"],
+    "baseUrl": ".",
+    "paths": {
+      "utils/*": ["./src/utils/*"],
+      "lib/*": ["./src/lib/*"],
+      "middlewares/*": ["./src/middlewares/*"],
+      "services/*": ["./src/services/*"],
+      "controllers/*": ["./src/controllers/*"]
+    }
   }
 }
