--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,8 +2,8 @@
   "name": "@snailycad/api",
   "version": "1.0.0-beta.20",
   "scripts": {
-    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/main.ts",
-    "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && ts-node src/main.ts",
+    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node -r tsconfig-paths/register src/main.ts",
+    "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prisma format",
     "generate": "prisma generate"
   },
@@ -21,7 +21,8 @@
     "esbuild": "^0.14.5",
     "esbuild-register": "^3.2.1",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0"
+    "tsconfig-paths": "^3.12.0",
+    "tsup": "^5.11.7"
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
