--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node -r tsconfig-paths/register src/main.ts",
     "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && ts-node -r tsconfig-paths/register src/main.ts",
+    "start:docker": "yarn add -D esbuild esbuild-linux-64 && yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prisma format",
     "generate": "prisma generate"
   },
