--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "@casper124578/useful": "^1.4.4",
     "@headlessui/react": "^1.4.2",
     "@radix-ui/react-context-menu": "^0.1.4",
+    "@radix-ui/react-dropdown-menu": "^0.1.4",
     "@radix-ui/react-switch": "^0.1.4",
     "@react-aria/label": "^3.2.1",
     "@react-aria/ssr": "^3.1.0",
