:hammer: add cancel previous runs workflow

--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   cancel:
-    name: "Cancel Previous Runs"
+    name: "Cancel Previous Actions"
     runs-on: ubuntu-latest
     timeout-minutes: 2
     steps:
