--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,6 @@
   "rules": {
     "@next/next/no-img-element": "off",
     "promise/always-return": "off",
-    "@typescript-eslint/consistent-type-imports": "off"
+    "no-duplicate-imports": "off"
   }
 }
