--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^0.1.4",
     "@radix-ui/react-hover-card": "^0.1.3",
     "@radix-ui/react-switch": "^0.1.4",
+    "@react-aria/focus": "^3.5.0",
     "@react-aria/label": "^3.2.1",
     "@react-aria/ssr": "^3.1.0",
     "@snailycad/config": "1.0.0-beta.31",
