--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -17,6 +17,16 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - uses: actions/cache@v2
+      - name: Load Next.js cache
+        with:
+          path: ${{ github.workspace }}/packages/client/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
