:hammer: chore: bump deps

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,44 +16,42 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
-    "@types/jsonwebtoken": "8.5.6",
-    "@types/node": "^17.0.5",
+    "@types/jsonwebtoken": "8.5.7",
+    "@types/node": "^17.0.8",
     "@types/node-fetch": "2",
-    "esbuild": "^0.14.10",
-    "esbuild-register": "^3.3.1",
+    "esbuild": "^0.14.11",
+    "esbuild-register": "^3.3.2",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
-    "tsup": "^5.11.10"
+    "tsconfig-paths": "^3.12.0"
   },
   "dependencies": {
-    "@prisma/client": "^3.7.0",
+    "@prisma/client": "^3.8.0",
     "@snailycad/config": "1.0.0-beta.36",
     "@snailycad/schemas": "1.0.0-beta.36",
-    "@tsed/common": "^6.97.2",
-    "@tsed/core": "^6.97.2",
-    "@tsed/di": "^6.97.2",
-    "@tsed/exceptions": "^6.97.2",
-    "@tsed/json-mapper": "^6.97.2",
-    "@tsed/platform-express": "^6.97.2",
-    "@tsed/schema": "^6.97.2",
-    "@tsed/socketio": "^6.97.2",
+    "@tsed/common": "^6.98.0",
+    "@tsed/core": "^6.98.0",
+    "@tsed/di": "^6.98.0",
+    "@tsed/exceptions": "^6.98.0",
+    "@tsed/json-mapper": "^6.98.0",
+    "@tsed/platform-express": "^6.98.0",
+    "@tsed/schema": "^6.98.0",
+    "@tsed/socketio": "^6.98.0",
     "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.0.1",
     "compression": "1.7.4",
     "cookie": "^0.4.1",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
-    "discord-api-types": "^0.26.0",
+    "discord-api-types": "0.26.1",
     "express": "4.17.2",
     "glob": "^7.2.0",
     "jsonwebtoken": "8.5.1",
-    "nanoid": "^3.1.30",
+    "nanoid": "^3.1.32",
     "node-fetch": "2",
     "nodemon": "^2.0.15",
-    "prisma": "^3.7.0",
-    "socket.io": "^4.4.0",
+    "prisma": "^3.8.0",
+    "socket.io": "^4.4.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "yup": "^0.32.11"
+    "typescript": "^4.5.4"
   }
 }
