--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
     "build": "yarn validate && yarn copy-env && yarn next-build",
     "next-build": "next build",
     "start": "next start",
-    "start:proxy-experimental": "next start --port 80",
+    "start:proxy-experimental": "next start --port",
     "copy-env": "node ../../scripts/copy-env.mjs --client --api",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,",
