--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,6 +34,7 @@
     "leaflet.markercluster": "^1.5.3",
     "next": "^12.0.8",
     "next-intl": "2.3.4",
+    "nookies": "^2.5.2",
     "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.7.2",
