Revert ":hammer: chore: remove unused experimental stuff"
This reverts commit 977e5dcf9826215caa11359a559493f4a45943b5.

--- a/.env.example
+++ b/.env.example
@@ -29,9 +29,13 @@ NEXT_PUBLIC_PROD_ORIGIN="http://api:8080/v1"
 # example: `DOMAIN="example.com"`
 DOMAIN=""
 
+# "true" or "false"
+SECURE_COOKIES_FOR_IFRAME="false"
+
 # The port of which the API will run on. Default: 8080
 # When using Docker, make sure to change this in the `production.docker-compose.yml` file too.
 PORT_API=8080
+
 
 
 # Do not change this.
