--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
     "build": "yarn validate && yarn copy-env && yarn next-build",
     "next-build": "next build",
     "start": "next start",
-    "start:proxy-experimental": "next start --port",
+    "start:proxy-experimental": "next start --port 80",
     "copy-env": "node ../../scripts/copy-env.mjs --client --api",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,",
@@ -34,6 +34,7 @@
     "leaflet.markercluster": "^1.5.3",
     "next": "^12.0.8",
     "next-intl": "2.3.4",
+    "nookies": "^2.5.2",
     "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.7.2",
