--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx",
     "lint:fix": "eslint . --ext .ts,.js,.tsx,.jsx --fix",
     "prepare": "husky install",
-    "bump-version": "node scripts/bump-version.mjs",
-    "postinstall": "patch-package"
+    "bump-version": "node scripts/bump-version.mjs"
   },
   "license": "MIT",
   "devDependencies": {
@@ -22,7 +21,7 @@
     "@casper124578/eslint-config-react": "^2.2.1",
     "colorette": "2.0.16",
     "copy": "^0.3.2",
-    "eslint": "^8.6.0",
+    "eslint": "^8.7.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "patch-package": "^6.4.7",
