:hammer: chore: import from node:

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2020,
+    "ecmaVersion": 2021,
     "sourceType": "module",
     "project": "./tsconfig.base.json",
     "ecmaFeatures": {
@@ -39,5 +39,43 @@
     "@typescript-eslint/prefer-optional-chain": "error",
     "@typescript-eslint/prefer-string-starts-ends-with": "error",
     "@typescript-eslint/prefer-ts-expect-error": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["packages/api/**"],
+      "rules": {
+        "no-restricted-globals": [
+          "error",
+          {
+            "name": "Buffer",
+            "message": "Import Buffer from `node:buffer` instead"
+          },
+          {
+            "name": "process",
+            "message": "Import process from `node:process` instead"
+          },
+          {
+            "name": "setTimeout",
+            "message": "Import setTimeout from `node:timers` instead"
+          },
+          {
+            "name": "setInterval",
+            "message": "Import setInterval from `node:timers` instead"
+          },
+          {
+            "name": "setImmediate",
+            "message": "Import setImmediate from `node:timers` instead"
+          },
+          {
+            "name": "clearTimeout",
+            "message": "Import clearTimeout from `node:timers` instead"
+          },
+          {
+            "name": "clearInterval",
+            "message": "Import clearInterval from `node:timers` instead"
+          }
+        ]
+      }
+    }
+  ]
 }
