--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,9 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2020,
+    "ecmaVersion": 2021,
     "sourceType": "module",
+    "project": "./tsconfig.base.json",
     "ecmaFeatures": {
       "jsx": true
     }
@@ -20,6 +21,61 @@
   "rules": {
     "@next/next/no-img-element": "off",
     "promise/always-return": "off",
-    "no-duplicate-imports": "off"
-  }
+    "no-duplicate-imports": "off",
+    "@typescript-eslint/no-extra-non-null-assertion": "error",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
+    "@typescript-eslint/no-this-alias": "error",
+    "@typescript-eslint/no-unnecessary-type-constraint": "error",
+    "@typescript-eslint/no-var-requires": "error",
+    "@typescript-eslint/prefer-as-const": "error",
+    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
+    "@typescript-eslint/no-unnecessary-condition": "error",
+    "@typescript-eslint/no-require-imports": "error",
+    "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
+    "@typescript-eslint/no-unnecessary-type-arguments": "error",
+    "@typescript-eslint/prefer-enum-initializers": "error",
+    "@typescript-eslint/prefer-includes": "error",
+    "@typescript-eslint/prefer-nullish-coalescing": "error",
+    "@typescript-eslint/prefer-optional-chain": "error",
+    "@typescript-eslint/prefer-string-starts-ends-with": "error",
+    "@typescript-eslint/prefer-ts-expect-error": "error"
+  },
+  "overrides": [
+    {
+      "files": ["packages/api/**"],
+      "rules": {
+        "no-restricted-globals": [
+          "error",
+          {
+            "name": "Buffer",
+            "message": "Import Buffer from `node:buffer` instead"
+          },
+          {
+            "name": "process",
+            "message": "Import process from `node:process` instead"
+          },
+          {
+            "name": "setTimeout",
+            "message": "Import setTimeout from `node:timers` instead"
+          },
+          {
+            "name": "setInterval",
+            "message": "Import setInterval from `node:timers` instead"
+          },
+          {
+            "name": "setImmediate",
+            "message": "Import setImmediate from `node:timers` instead"
+          },
+          {
+            "name": "clearTimeout",
+            "message": "Import clearTimeout from `node:timers` instead"
+          },
+          {
+            "name": "clearInterval",
+            "message": "Import clearInterval from `node:timers` instead"
+          }
+        ]
+      }
+    }
+  ]
 }
