--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,7 +18,6 @@
     "@types/glob": "^7.2.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "^17.0.9",
-    "@types/node-fetch": "2",
     "esbuild": "^0.14.11",
     "esbuild-register": "^3.3.2",
     "ts-node": "^10.4.0",
@@ -46,11 +45,11 @@
     "glob": "^7.2.0",
     "jsonwebtoken": "8.5.1",
     "nanoid": "^3.2.0",
-    "node-fetch": "2",
     "nodemon": "^2.0.15",
     "prisma": "^3.8.1",
     "socket.io": "^4.4.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "undici": "^4.12.2"
   }
 }
