:tada: feat: tow/taxi rich text

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -23,7 +23,8 @@
       "lib/*": ["./src/lib/*"],
       "middlewares/*": ["./src/middlewares/*"],
       "services/*": ["./src/services/*"],
-      "controllers/*": ["./src/controllers/*"]
+      "controllers/*": ["./src/controllers/*"],
+      "migrations/*": ["./src/migrations/*"]
     }
   }
 }
