--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^0.1.4",
     "@radix-ui/react-hover-card": "^0.1.3",
     "@radix-ui/react-switch": "^0.1.4",
+    "@radix-ui/react-toolbar": "^0.1.4",
     "@react-aria/focus": "^3.5.0",
     "@react-aria/label": "^3.2.1",
     "@react-aria/ssr": "^3.1.0",
@@ -43,7 +44,6 @@
     "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
-    "react-markdown": "^7.1.2",
     "react-select": "^5.2.2",
     "react-sortablejs": "^6.0.3",
     "react-table": "^7.7.0",
