:tada: feat: add slate-history

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -49,6 +49,7 @@
     "react-table": "^7.7.0",
     "react-use": "^17.3.2",
     "slate": "^0.72.3",
+    "slate-history": "^0.66.0",
     "slate-react": "^0.72.5",
     "socket.io-client": "^4.4.1",
     "sortablejs": "^1.14.0",
