--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "eslint": "^8.7.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "prettier": "^2.5.1"
-  },
-  "dependencies": {
+    "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3"
   }
 }
