--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "snailycad",
   "version": "1.0.0-beta.40",
-  "packageManager": "yarn@3.1.0",
+  "packageManager": "yarn@3.1.1",
   "workspaces": [
     "packages/**"
   ],
@@ -12,7 +12,8 @@
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx",
     "lint:fix": "eslint . --ext .ts,.js,.tsx,.jsx --fix",
     "prepare": "husky install",
-    "bump-version": "node scripts/bump-version.mjs"
+    "bump-version": "node scripts/bump-version.mjs",
+    "postinstall": "husky install"
   },
   "license": "MIT",
   "devDependencies": {
@@ -24,7 +25,11 @@
     "eslint": "^8.7.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
+    "lint-staged": "12.2.2",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3"
+  },
+  "lint-staged": {
+    "*.{ts,js,tsx,jsx}": "eslint . --cache --fix"
   }
 }
