--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "pretty-quick": "^3.1.3"
   },
   "lint-staged": {
-    "*.{ts,js,tsx,jsx}": "eslint . --cache --fix"
+    "*.{ts,js,tsx,jsx}": "eslint --cache --fix"
   }
 }
