--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ packages/api/public/**/*.svg
 packages/api/public/**/*.jpg
 packages/api/public/**/*.jpeg
 
+.eslintcache
 
 .yarn/*
 !.yarn/patches
@@ -22,3 +23,5 @@ packages/api/public/**/*.jpeg
 .tsconfig.tsbuildinfo
 
 packages/client/public/favicon.png
+
+.husky/_
