--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3"
+  },
+  "dependencies": {
+    "faker": "5"
   }
 }
