:hammer: chore: frozen-lockfile -> immutable

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -27,7 +27,7 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Build config
         run: "yarn workspace @snailycad/config build"
