--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "format:quick": "pretty-quick --staged --pattern \"packages/**/*.{js,jsx,ts,tsx,md,css,json}\"",
     "format": "prettier --write \"./packages/**/**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
-    "lint": "eslint . --ext .ts,.js,.tsx,.jsx",
-    "lint:fix": "eslint . --ext .ts,.js,.tsx,.jsx --fix",
+    "lint": "eslint ./packages/** --ext .ts,.js,.tsx,.jsx",
+    "lint:fix": "eslint ./packages/** --ext .ts,.js,.tsx,.jsx --fix",
     "prepare": "husky install",
     "bump-version": "node scripts/bump-version.mjs",
     "postinstall": "husky install"
