--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
     "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
     "skipLibCheck": true,
+    "importsNotUsedAsValues": "error",
 
     /* Additional Checks */
     "noUnusedLocals": true /* Report errors on unused locals. */,
