--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,7 @@
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
     "skipLibCheck": true,
     "importsNotUsedAsValues": "error",
+    "pretty": true,
 
     /* Additional Checks */
     "noUnusedLocals": true /* Report errors on unused locals. */,
