--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,7 @@
     "@types/glob": "^7.2.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "^17.0.10",
+    "@types/qrcode": "^1.4.2",
     "esbuild": "^0.14.13",
     "esbuild-register": "^3.3.2",
     "ts-node": "^10.4.0",
@@ -46,7 +47,9 @@
     "jsonwebtoken": "8.5.1",
     "nanoid": "^3.2.0",
     "nodemon": "^2.0.15",
+    "otplib": "^12.0.1",
     "prisma": "^3.8.1",
+    "qrcode": "^1.5.0",
     "socket.io": "^4.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
