:hammer: minor fix

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ POSTGRES_DB="snaily-cad-v4"
 # This is a random value to keep the CAD's cookies secured. Make sure to change this!
 JWT_SECRET="some-random-string-of-characters"
 
+# string of 32 characters long.
+# Generate one at: https://codebeautify.org/generate-random-string
+ENCRYPTION_TOKEN="Geu2WGypP7irbwa3tCeeKS6YiyluFLep"
+
 # This is the URL to your site where the CAD is hosted.
 # -> eg https://cad.mysite.com or http://99.99.00.190:3000
 CORS_ORIGIN_URL="http://localhost:3000"
