--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ packages/api/public/**/*.jpeg
 
 .vscode/settings.json
 .tsconfig.tsbuildinfo
+tsconfig.tsbuildinfo
 
 packages/client/public/favicon.png
 
