--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
+    "is-hotkey": "^0.2.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
