:tada: add turborepo

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,8 @@
     "copy-env": "node ../../scripts/copy-env.mjs --client --api",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,",
-    "validate": "node ../../scripts/validate.mjs"
+    "validate": "node ../../scripts/validate.mjs",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@casper124578/use-socket.io": "3.1.1",
