--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,12 @@
         ".next/**",
         "dist/**"
       ]
+    },
+    "typecheck": {
+      "dependsOn": [
+        "^typecheck"
+      ],
+      "outputs": []
     }
   }
 }
