fix: build packages

--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,13 @@
         "^typecheck"
       ],
       "outputs": []
+    },
+    "start": {
+      "dependsOn": [
+        "^start",
+        "^build"
+      ],
+      "outputs": []
     }
   }
 }
