:hammer: chore: cache Next.js build

--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -22,6 +22,16 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
+      - uses: actions/cache@v2
+      - name: Cache Next.js' build dir
+        with:
+          path: ${{ github.workspace }}/packages/client/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+
       - name: Run turbo build
         run: yarn turbo run build
 
