--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -1,9 +1,9 @@
-name: Test builds
+name: Typecheck & test builds in workspaces/*
 
 on: [push, pull_request]
 
 jobs:
-  test-client-build:
+  typecheck:
     runs-on: ubuntu-latest
 
     strategy:
@@ -15,19 +15,9 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
+          cache: yarn
+          cache-dependency-path: yarn.lock
           node-version: ${{ matrix.node-version }}
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
 
       - uses: actions/cache@v2
         with:
@@ -41,14 +31,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Build config
-        run: "yarn workspace @snailycad/config build"
+      - name: Run turbo build
+        run: yarn turbo run build
 
-      - name: Build schemas
-        run: "yarn workspace @snailycad/schemas build"
-
-      - name: Build types
-        run: "yarn workspace @snailycad/types build"
-
-      - name: Run build
-        run: "yarn workspace @snailycad/client build"
+      - name: Run turbo typecheck
+        run: yarn turbo run typecheck
